# FIDE-Google_Efficient_Chess_AI_Challenge

./: .gitignore  Makefile  pyproject.toml
src/: alpha_beta_bot.py  baseline.py  main.ipynb  main.py  rulebase_bot.py  rulebase_bot_queen_strategy.py
